@@ -1,6 +1,10 @@
 libmongoc 1.29.0 (unreleased)
 =============================
 
+Deprecated:
+
+  * Compiling with `BSON_MEMCHECK` defined is deprecated.
+
 Platform Support:
 
   * Support for Visual Studio 2013 is dropped.
